tests/lean/patvar.lean.expected.out
patvar.lean:3:0-3:5: error: missing cases:
(List.cons _ _)
patvar.lean:10:0-10:5: error: missing cases:
(List.cons _ _)
patvar.lean:14:0-14:21: error: invalid pattern variable, must be atomic
patvar.lean:17:0-17:20: error: invalid pattern variable, must be atomic
